# RustShop

./: .gitignore
ADVICE/: PostgreSQL.md  Rust-lang.md  Rust-libs.md
call_api/: .env  .gitignore  Cargo.toml  README.md
call_api/src/: main.rs
chat/: .gitignore  Cargo.toml  README.md
chat/src/: lib.rs  utils.rs
cmd_app/: .gitignore  Cargo.toml  README.md
cmd_app/src/: args.rs  main.rs  ops.rs
cmd_app/src/ops/: collect_ops.rs  load_ops.rs  user_ops.rs  uvideo_ops.rs
lang_demo/: .gitignore  Cargo.toml  README.md  test_17.txt
lang_demo/src/: main.rs  section_11.rs  section_12.rs  section_13.rs  section_14.rs  section_15.rs  section_17.rs  section_2.rs  section_20.rs  section_21.rs  section_22.rs  section_23.rs  section_24.rs  section_26.rs  section_27.rs  section_27a.rs  section_27b.rs  section_28.rs  section_28a.rs  section_28b.rs  section_3.rs  section_4.rs  section_5.rs  section_6.rs  section_8.rs  section_9.rs
macros/: .gitignore  Cargo.toml
macros/src/: lib.rs
wasm/game-of-life/: Cargo.toml  README.md
wasm/game-of-life/src/: lib.rs
wasm/game-of-life/www/: .gitignore  index.html  index.js  package-lock.json  package.json
wasm/hello-wasm/: Cargo.toml  README.md  index.html
wasm/hello-wasm/site/: index.html  package-lock.json  package.json
wasm_app/: Cargo.toml  LICENSE_MIT
wasm_app/src/: lib.rs
wasm_app/www/: package-lock.json
