[package]
name = "game-of-life"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = "A game-of-life project"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/game-of-life"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
